--- a/nym-registration-client/Cargo.toml
+++ b/nym-registration-client/Cargo.toml
@@ -20,11 +20,11 @@ tracing.workspace = true
 typed-builder.workspace = true
 url.workspace = true
 
-nym-authenticator-client = { path = "../nym-authenticator-client" }
-nym-bandwidth-controller = { path = "../common/bandwidth-controller" }
-nym-credential-storage = { path = "../common/credential-storage" }
-nym-credentials-interface = { path = "../common/credentials-interface" }
-nym-ip-packet-client = { path = "../nym-ip-packet-client" }
+nym-authenticator-client = { workspace = true }
+nym-bandwidth-controller = { workspace = true }
+nym-credential-storage = { workspace = true }
+nym-credentials-interface = { workspace = true }
+nym-ip-packet-client = { workspace = true }
 nym-registration-common = { path = "../common/registration" }
 nym-sdk = { path = "../sdk/rust/nym-sdk" }
-nym-validator-client = { path = "../common/client-libs/validator-client" }
+nym-validator-client = { workspace = true }
