--- a/nym-gateway-probe/Cargo.toml
+++ b/nym-gateway-probe/Cargo.toml
@@ -42,20 +42,20 @@ x25519-dalek = { workspace = true, features = [
     "static_secrets",
 ] }
 
-nym-authenticator-requests = { path = "../common/authenticator-requests" }
-nym-bandwidth-controller = { path = "../common/bandwidth-controller" }
-nym-bin-common = { path = "../common/bin-common" }
-nym-client-core = { path = "../common/client-core" }
+nym-authenticator-requests = { workspace = true }
+nym-bandwidth-controller = { workspace = true }
+nym-bin-common = { workspace = true }
+nym-client-core = { workspace = true }
 nym-crypto = { path = "../common/crypto" }
-nym-config = { path = "../common/config" }
+nym-config = { workspace = true }
 nym-connection-monitor = { path = "../common/nym-connection-monitor" }
 nym-credentials-interface = { path = "../common/credentials-interface" }
 nym-credential-utils = { path = "../common/credential-utils" }
-nym-ip-packet-client = { path = "../nym-ip-packet-client" }
-nym-authenticator-client = { path = "../nym-authenticator-client" }
-nym-ip-packet-requests = { path = "../common/ip-packet-requests" }
-nym-sdk = { path = "../sdk/rust/nym-sdk" }
-nym-validator-client = { path = "../common/client-libs/validator-client" }
+nym-ip-packet-client = { workspace = true }
+nym-authenticator-client = { workspace = true }
+nym-ip-packet-requests = { workspace = true }
+nym-sdk = { workspace = true }
+nym-validator-client = { workspace = true }
 nym-credentials = { path = "../common/credentials" }
 nym-http-api-client-macro = { path = "../common/http-api-client-macro" }
 nym-http-api-client = { path = "../common/http-api-client" }
