--- a/common/verloc/Cargo.toml
+++ b/common/verloc/Cargo.toml
@@ -22,8 +22,8 @@ thiserror = { workspace = true }
 rand = { workspace = true }
 url = { workspace = true }
 
-nym-crypto = { path = "../crypto", features = ["asymmetric"] }
-nym-task = { path = "../task" }
+nym-crypto = { workspace = true, features = ["asymmetric"] }
+nym-task = { workspace = true }
 nym-validator-client = { workspace = true }
 nym-http-api-client = { workspace = true }
 nym-api-requests = { workspace = true }
