--- a/common/mixnode-common/Cargo.toml
+++ b/common/mixnode-common/Cargo.toml
@@ -34,5 +34,5 @@ nym-sphinx-forwarding = { workspace = true }
 nym-sphinx-framing = { workspace = true }
 nym-sphinx-params = { workspace = true }
 nym-sphinx-types = { workspace = true }
-nym-task = { path = "../task" }
+nym-task = { workspace = true }
 nym-metrics = { workspace = true }
