--- a/nym-credential-proxy/nym-credential-proxy-requests/Cargo.toml
+++ b/nym-credential-proxy/nym-credential-proxy-requests/Cargo.toml
@@ -25,12 +25,12 @@ wasm-bindgen = { workspace = true, optional = true }
 ## openapi:
 utoipa = { workspace = true, optional = true, features = ["uuid"] }
 
-nym-credentials = { path = "../../common/credentials" }
-nym-credentials-interface = { path = "../../common/credentials-interface" }
+nym-credentials = { workspace = true }
+nym-credentials-interface = { workspace = true }
 nym-http-api-common = { workspace = true, optional = true }
-nym-http-api-client = { path = "../../common/http-api-client" }
-nym-serde-helpers = { path = "../../common/serde-helpers", features = ["bs58"] }
-nym-upgrade-mode-check = { path = "../../common/upgrade-mode-check" }
+nym-http-api-client = { workspace = true }
+nym-serde-helpers = { workspace = true, features = ["bs58"] }
+nym-upgrade-mode-check = { workspace = true }
 
 [target."cfg(target_arch = \"wasm32\")".dependencies.wasmtimer]
 workspace = true
