--- a/Cargo.toml
+++ b/Cargo.toml
@@ -454,6 +454,7 @@ nym-sphinx-params = { version = "1.20.1", path = "common/nymsphinx/params" }
 nym-sphinx-routing = { version = "1.20.1", path = "common/nymsphinx/routing" }
 nym-sphinx-types = { version = "1.20.1", path = "common/nymsphinx/types" }
 nym-statistics-common = { version = "1.20.1", path = "common/statistics" }
+nym-store-cipher = { version = "1.20.1", path = "common/store-cipher" }
 nym-task = { version = "1.20.1", path = "common/task" }
 nym-tun = { version = "1.20.1", path = "common/tun" }
 nym-test-utils = { version = "1.20.1", path = "common/test-utils" }
@@ -465,6 +466,9 @@ nym-validator-client = { version = "1.20.1", path = "common/client-libs/validato
 nym-vesting-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/vesting-contract" }
 nym-wireguard = { version = "1.20.1", path = "common/wireguard" }
 nym-wireguard-types = { version = "1.20.1", path = "common/wireguard-types" }
+nym-wireguard-private-metadata-shared =  { version = "1.20.1", path = "common/wireguard-private-metadata/shared" }
+nym-wireguard-private-metadata-client =  { version = "1.20.1", path = "common/wireguard-private-metadata/client" }
+nym-wireguard-private-metadata-server =  { version = "1.20.1", path = "common/wireguard-private-metadata/server" }
 nym-sqlx-pool-guard = { version = "1.2.0", path = "nym-sqlx-pool-guard" }
 nym-wasm-client-core = { version = "1.20.1", path = "common/wasm/client-core" }
 nym-wasm-storage = { version = "1.20.1", path = "common/wasm/storage" }
