Minor comment change

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -378,8 +378,7 @@ zeroize = "1.7.0"
 
 prometheus = { version = "0.14.0" }
 
-# sdk related deps so we can pull in workspace versions of these in other crates' cargo files, and not have to define the version everywhere
-# these versions should be kept in line with the workspace version defined above
+# Workspace deps to publish to crates.io
 nym-api-requests = { version = "1.20.1", path = "nym-api/nym-api-requests" }
 nym-authenticator-requests = { version = "1.20.1", path = "common/authenticator-requests" }
 nym-async-file-watcher = { version = "1.20.1", path = "common/async-file-watcher" }
