--- a/common/cosmwasm-smart-contracts/multisig-contract/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/multisig-contract/Cargo.toml
@@ -3,6 +3,8 @@ name = "nym-multisig-contract-common"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Common code for the Nym multisig CosmWasm smart contract"
+homepage.workspace = true
 
 [dependencies]
 cosmwasm-schema = { workspace = true }
