--- a/common/nym-common/Cargo.toml
+++ b/common/nym-common/Cargo.toml
@@ -5,6 +5,7 @@ authors.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
+description = "max todo"
 
 [lints]
 workspace = true
