--- a/service-providers/common/Cargo.toml
+++ b/service-providers/common/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-service-providers-common"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Common crate for Nym Service Providers"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
