--- a/clients/native/websocket-requests/Cargo.toml
+++ b/clients/native/websocket-requests/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
+description = "Request and response definitions for Nym client websocket connections"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
