--- a/common/authenticator-requests/Cargo.toml
+++ b/common/authenticator-requests/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Crate defining requests and responses for the Nym authenticator client"
 
 [dependencies]
 base64 = { workspace = true }
