--- a/common/client-core/Cargo.toml
+++ b/common/client-core/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
 edition = "2021"
 rust-version = "1.85"
 license.workspace = true
+description = "Crate containing core client functionality and configs, used by all other Nym client implentations"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
