--- a/common/client-core/gateways-storage/Cargo.toml
+++ b/common/client-core/gateways-storage/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition = "2021"
 license.workspace = true
 rust-version.workspace = true
+description = "Functionality for Nym clients to store and retrive Gateway connections"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
