--- a/common/client-libs/gateway-client/Cargo.toml
+++ b/common/client-libs/gateway-client/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 authors = ["Jędrzej Stuczyński <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
+description = "Functions and types for Nym client <> Gateway connections"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
