--- a/common/commands/Cargo.toml
+++ b/common/commands/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 authors.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Common commands crate used by the nym-cli tool for interacting with the Nyx Cosmos SDK blockchain and Mixnet endpoints"
 
 [dependencies]
 anyhow = { workspace = true }
