--- a/common/config/Cargo.toml
+++ b/common/config/Cargo.toml
@@ -4,6 +4,8 @@ version.workspace = true
 authors = ["Jedrzej Stuczynski <andrew@nymtech.net>"]
 edition = "2021"
 license.workspace = true
+homepage.workspace = true
+description = "Config related helpers and functions"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
