--- a/common/cosmwasm-smart-contracts/contracts-common-testing/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/contracts-common-testing/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 readme.workspace = true
+description = "Common crate for cosmwasm contract tests"
 
 [dependencies]
 anyhow = { workspace = true }
