--- a/common/credential-storage/Cargo.toml
+++ b/common/credential-storage/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition = "2021"
 license.workspace = true
 rust-version.workspace = true
+description = "Crate for handling and storing spent and unspent zknym ticketbooks"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
