--- a/common/ecash-time/Cargo.toml
+++ b/common/ecash-time/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Time-related helper functions for Nym's zknym scheme"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
