--- a/common/exit-policy/Cargo.toml
+++ b/common/exit-policy/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Get and set the Nym Exit Policy, used by Exit Gateways"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
