--- a/common/node-tester-utils/Cargo.toml
+++ b/common/node-tester-utils/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-node-tester-utils"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Utils for the Nym Node Tester"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
