--- a/common/registration/Cargo.toml
+++ b/common/registration/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Struct definitions for NymNode, GatewayData, and AssignedAddresses"
 
 [lints]
 workspace = true
