--- a/common/serde-helpers/Cargo.toml
+++ b/common/serde-helpers/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Serde helpers for hex/base64/base58/datetime"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
