--- a/common/service-provider-requests-common/Cargo.toml
+++ b/common/service-provider-requests-common/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 readme.workspace = true
+description = "Common crate for requests and responses for Nym Service Providers"
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
