--- a/common/socks5/ordered-buffer/Cargo.toml
+++ b/common/socks5/ordered-buffer/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
 edition = "2021"
 license.workspace = true
+description = "This crate takes care of reliably and speedily turning bytes into a series of ordered message fragments on one side, and of reliably reassembling the fragments into the original message on the other"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
