--- a/common/socks5/requests/Cargo.toml
+++ b/common/socks5/requests/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
 edition = "2021"
 license.workspace = true
+description = "Request and response definitions for the Nym SOCKS client"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
