--- a/common/ticketbooks-merkle/Cargo.toml
+++ b/common/ticketbooks-merkle/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 readme.workspace = true
+description = "Generate and verify merkleproofs of zknym ticketbooks"
 
 [dependencies]
 sha2 = { workspace = true }
