--- a/common/upgrade-mode-check/Cargo.toml
+++ b/common/upgrade-mode-check/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 readme.workspace = true
+description = "Functions and tests for checking Nym's Credential Proxy is being properly upgraded"
 
 [dependencies]
 jwt-simple = { workspace = true }
