--- a/common/wireguard-private-metadata/shared/Cargo.toml
+++ b/common/wireguard-private-metadata/shared/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Common crate for nym-wireguard server, client, and tests"
 
 [dependencies]
 axum = { workspace = true }
