--- a/common/wireguard-private-metadata/tests/Cargo.toml
+++ b/common/wireguard-private-metadata/tests/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Tests for nym-wireguard implementation"
 
 [dependencies]
 async-trait = { workspace = true }
