--- a/nym-node/nym-node-metrics/Cargo.toml
+++ b/nym-node/nym-node-metrics/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+description = "Crate defining various metrics for Nym Nodes (Mix Nodes and Gateways) such as ongoing connections, packets mixed, and packets dropped"
 
 [dependencies]
 dashmap = { workspace = true }
