--- a/common/dkg/Cargo.toml
+++ b/common/dkg/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition = "2021"
 resolver = "2"
 license.workspace = true
+description = "Nym's Distributed Key Generation functionality"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
